--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
             <groupId>com.dropbox.core</groupId>
             <artifactId>dropbox-core-sdk</artifactId>
             <version>3.0.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -32,6 +33,14 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.9.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
